--- a/group_invoice_lines/views/report_invoice.xml
+++ b/group_invoice_lines/views/report_invoice.xml
@@ -8,42 +8,48 @@
 <!--                            <t t-set="lines" t-value="o.invoice_line_ids.sorted(key=lambda l: (-l.sequence, l.date, l.move_name, -l.id), reverse=True)"/>-->
 							<t t-set="lines_grouped" t-value="o.group_lines()"/>
                             <t t-foreach="lines_grouped" t-as="line">
-                                <t t-set="current_subtotal" t-value="current_subtotal + line[6]" groups="account.group_show_line_subtotals_tax_excluded"/>
-                                <t t-set="current_subtotal" t-value="current_subtotal + line[7]" groups="account.group_show_line_subtotals_tax_included"/>
+                                <t t-set="current_subtotal" t-value="current_subtotal + line[8]" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                <t t-set="current_subtotal" t-value="current_subtotal + line[9]" groups="account.group_show_line_subtotals_tax_included"/>
 
-                                <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line[8] == 'line_section' else 'font-italic o_line_note' if line[8] == 'line_note' else ''">
-                                    <t t-if="not line[8]" name="account_invoice_line_accountable">
-                                        <td name="account_invoice_line_name">
+                                <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line[10] == 'line_section' else 'font-italic o_line_note' if line[10] == 'line_note' else ''">
+                                    <t t-if="not line[10]" name="account_invoice_line_accountable">
+                                        <td name="account_invoice_line_code">
 	                                        <span t-esc="line[0]"/>
                                         </td>
+                                        <td name="account_invoice_line_name">
+	                                        <span t-esc="line[1]"/>
+                                        </td>
                                         <td class="text-right">
-                                            <span t-esc="line[1]"/>
-                                            <span t-esc="line[2]"  groups="uom.group_uom"/>
+                                            <span t-esc="line[2]"/>
+                                            <span t-esc="line[3]"  groups="uom.group_uom"/>
                                         </td>
                                         <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                            <span class="text-nowrap" t-esc="line[3]"/>
-                                        </td>
-                                        <td t-if="display_discount" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                             <span class="text-nowrap" t-esc="line[4]"/>
                                         </td>
+                                        <td class="text-right" name="account_invoice_line_uom_code">
+	                                        <span t-esc="line[5]"/>
+                                        </td>
+                                        <td t-if="display_discount" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
+                                            <span class="text-nowrap" t-esc="line[6]"/>
+                                        </td>
                                         <td t-attf-class="text-left {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                            <span t-esc="', '.join(map(lambda x: (x.description or x.name), line[5]))" id="line_tax_ids"/>
+                                            <span t-esc="', '.join(map(lambda x: (x.description or x.name), line[7]))" id="line_tax_ids"/>
                                         </td>
                                         <td class="text-right o_price_total">
-                                            <span class="text-nowrap" t-esc="line[6]" groups="account.group_show_line_subtotals_tax_excluded"/>
-                                            <span class="text-nowrap" t-esc="line[7]" groups="account.group_show_line_subtotals_tax_included"/>
+                                            <span class="text-nowrap" t-esc="line[8]" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                            <span class="text-nowrap" t-esc="line[9]" groups="account.group_show_line_subtotals_tax_included"/>
                                         </td>
                                     </t>
-                                    <t t-if="line[8] == 'line_section'">
+                                    <t t-if="line[10] == 'line_section'">
                                         <td colspan="99">
-                                            <span t-esc="line[0]"/>
+                                            <span t-esc="line[1]"/>
                                         </td>
                                         <t t-set="current_section" t-value="line"/>
                                         <t t-set="current_subtotal" t-value="0"/>
                                     </t>
-                                    <t t-if="line[8] == 'line_note'">
+                                    <t t-if="line[10] == 'line_note'">
                                         <td colspan="99">
-                                            <span t-esc="line[0]"/>
+                                            <span t-esc="line[1]"/>
                                         </td>
                                     </t>
                                 </tr>
