Se agrega el widget 'text' a la nota y la seccion

--- a/group_invoice_lines/views/report_invoice.xml
+++ b/group_invoice_lines/views/report_invoice.xml
@@ -42,14 +42,14 @@
                                     </t>
                                     <t t-if="line[10] == 'line_section'">
                                         <td colspan="99">
-                                            <span t-esc="line[1]"/>
+                                            <span t-esc="line[1]" t-options="{'widget': 'text'}"/>
                                         </td>
                                         <t t-set="current_section" t-value="line"/>
                                         <t t-set="current_subtotal" t-value="0"/>
                                     </t>
                                     <t t-if="line[10] == 'line_note'">
                                         <td colspan="99">
-                                            <span t-esc="line[1]"/>
+                                            <span t-esc="line[1]" t-options="{'widget': 'text'}"/>
                                         </td>
                                     </t>
                                 </tr>
