--- a/group_invoice_lines/views/report_invoice.xml
+++ b/group_invoice_lines/views/report_invoice.xml
@@ -54,7 +54,8 @@
                                     </t>
                                 </tr>
 
-                                <t t-if="current_section and (line_last or lines[line_index+1].display_type == 'line_section')">
+<!--                                <t t-if="current_section and (line_last or lines[line_index+1].display_type == 'line_section')">-->
+                                <t t-if="current_section and (line_last or line[10] == 'line_section')">
                                     <tr class="is-subtotal text-right">
                                         <td colspan="99">
                                             <strong class="mr16">Subtotal</strong>
